--- a/src/components/textarea/Textarea.module.css
+++ b/src/components/textarea/Textarea.module.css
@@ -1,6 +1,6 @@
 .textarea {
     resize: none;
-    border-radius: 6px;
+    border-radius: 8px;
     border: 2px solid #EDE8F7;
     padding: 16px;
     color: #9B99AA;
@@ -14,6 +14,11 @@
     line-height: normal;
 
     height: 100px;
+}
+
+:focus {
+    box-shadow: 0 4px 8px 0 rgba(46, 9, 182, 0.06);
+    color: #1D1539;
 }
 
 ::-webkit-input-placeholder {
