--- a/src/components/select/Select.module.css
+++ b/src/components/select/Select.module.css
@@ -1,20 +1,85 @@
-.select {
+/*.select {*/
+/*    border-radius: 6px;*/
+/*    border: 2px solid #EDE8F7;*/
+/*    padding: 16px;*/
+/*    cursor: pointer;*/
+/*    color: #9B99AA;*/
+/*    height: 56px;*/
+/*    transition: all 0.3s;*/
+/*    outline: none;*/
+/*    appearance: none;*/
+
+/*    font-family: LetoSans, sans-serif;*/
+/*    font-size: 14px;*/
+/*    font-style: normal;*/
+/*    font-weight: 400;*/
+/*    line-height: normal;*/
+/*}*/
+/*:hover {*/
+/*    border-color: #C0BAD5;*/
+/*}*/
+
+.container {
+    position: relative;
+    min-width: 300px;
+    min-height: 56px;
     border-radius: 6px;
     border: 2px solid #EDE8F7;
-    padding: 16px;
     cursor: pointer;
-    color: #9B99AA;
-    height: 56px;
     transition: all 0.3s;
-    outline: none;
-    appearance: none;
-
-    font-family: LetoSans, sans-serif;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+    display: flex;
+    align-items: center;
+    padding: 5px 10px;
+    color: #9B99AA;
+    font-family: LetoSans, 'sans-serif';
 }
-:hover {
-    border-color: #C0BAD5;
+
+/*.container:hover {*/
+/*    border: 2px solid #C0BAD5;*/
+/*}*/
+
+.container.show {
+    border-radius: 6px 6px 0 0;
+    color: #1D1539;
+}
+
+.value {
+    flex-grow: 1;
+    font-size: 14px;
+}
+
+.options {
+    margin: 0;
+    list-style: none;
+    display: none;
+    border: solid #EDE8F7;
+    border-width: 1px 2px;
+    border-radius: 0 0 6px 6px;
+    background: #FFF;
+    position: absolute;
+    top: calc(100%);
+    left: -2px;
+    width: 101%;
+    z-index: 10;
+    font-size: 14px;
+}
+
+.options.show {
+    display: block;
+}
+
+.option {
+    height: 40px;
+    padding: 5px 10px;
+    border-top: 1px solid #EDE8F7;
+    display: flex;
+    align-items: center;
+}
+
+.option.highlighted {
+    background-color: #F8F7FA;
+}
+
+.option.selected {
+    background-color: #f1eeff;
 }
