--- a/src/components/select/Select.module.css
+++ b/src/components/select/Select.module.css
@@ -1,24 +1,3 @@
-/*.select {*/
-/*    border-radius: 6px;*/
-/*    border: 2px solid #EDE8F7;*/
-/*    padding: 16px;*/
-/*    cursor: pointer;*/
-/*    color: #9B99AA;*/
-/*    height: 56px;*/
-/*    transition: all 0.3s;*/
-/*    outline: none;*/
-/*    appearance: none;*/
-
-/*    font-family: LetoSans, sans-serif;*/
-/*    font-size: 14px;*/
-/*    font-style: normal;*/
-/*    font-weight: 400;*/
-/*    line-height: normal;*/
-/*}*/
-/*:hover {*/
-/*    border-color: #C0BAD5;*/
-/*}*/
-
 .container {
     position: relative;
     min-width: 300px;
@@ -29,7 +8,7 @@
     transition: all 0.3s;
     display: flex;
     align-items: center;
-    padding: 5px 10px;
+    padding: 5px 15px 5px 10px;
     color: #9B99AA;
     font-family: LetoSans, 'sans-serif';
 }
@@ -46,6 +25,8 @@
 .value {
     flex-grow: 1;
     font-size: 14px;
+    padding-top: 15px;
+    color: #1D1539;
 }
 
 .options {
@@ -80,6 +61,38 @@
     background-color: #F8F7FA;
 }
 
-.option.selected {
-    background-color: #f1eeff;
+/*.option.selected {*/
+/*    background-color: #f1eeff;*/
+/*}*/
+
+.arrow {
+    width: 9px;
+    height: 9px;
+    border-right: 1px solid #202020;
+    border-bottom: 1px solid #202020;
+    border-image: initial;
+    border-top: transparent;
+    border-left: transparent;
+    transform: rotate(45deg);
+}
+.arrow.show {
+    transform: rotate(225deg);
+    margin-top: 8px;
+}
+
+.label {
+    position: absolute;
+    cursor: pointer;
+    font-size: 14px;
+    transition: all 0.2s;
+}
+
+.label.show {
+    font-size: 10px;
+    top: 10px;
+}
+
+.label.highlighted {
+    font-size: 10px;
+    top: 10px;
 }
