--- a/src/components/input/Input.module.css
+++ b/src/components/input/Input.module.css
@@ -10,7 +10,7 @@
     width: 100%;
     border-radius: 8px;
     border: 2px solid #EDE8F7;
-    padding: 10px 15px 5px;
+    padding: 12px 13px 0;
     transition: all 0.3s;
     outline: none;
 
@@ -39,7 +39,7 @@
 
 .label {
     position: absolute;
-    top: 5px;
+    top: 8px;
     left: 15px;
     display: block;
     transition: 0.2s;
@@ -50,7 +50,7 @@
 .input:focus {
     ~ .label {
         position: absolute;
-        top: 5px;
+        top: 8px;
         left: 15px;
         display: block;
         transition: 0.2s;
