--- a/src/pages/main/Main.module.css
+++ b/src/pages/main/Main.module.css
@@ -8,3 +8,19 @@
     font-size: 16px;
     font-weight: 400;
 }
+
+.dataWrapper {
+    margin-top: 20px;
+}
+
+.email {
+    margin-top: 10px;
+}
+
+.theme {
+    margin-top: 10px;
+}
+
+.emptyForm {
+    margin-top: 20px;
+}
